tests/sumo/devices/rerouting/personTrip/errors/flow_without_end/errors.sumo
Warning: Undefined end for flow 'bus', defaulting to 24hour duration.
Warning: Undefined end for flow 'bus2', defaulting to 24hour duration.
